apex-backwoods/objects/Park_Tour__c/Park_Tour__c.object-meta.xml
<CustomObject>
    <description>A junction object between Leads/Contact and Adventure Parks. Represents an actual tour of a park, which differentiates itself from POIs. Parks of Interest represents merely interest and desired park adventure. But a Park Tour is an actual tour of the adventure.</description>
    <label>Park Tour</label>
    <nameField>
        <displayFormat>PT-{000}</displayFormat>
        <label>Park Tour Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Park Tour</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>