apex-backwoods/objects/Park_Tour__c/fields/Adventure_Park__c.field-meta.xml
<CustomField>
    <fullName>Adventure_Park__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adventure Park</label>
    <referenceTo>Adventure_Park__c</referenceTo>
    <relationshipLabel>Park Tour</relationshipLabel>
    <relationshipName>Park_Tour</relationshipName>
    <type>Lookup</type>
</CustomField>