apex-backwoods/objects/Park_Tour__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Park Tour</relationshipLabel>
    <relationshipName>Park_Tour</relationshipName>
    <type>Lookup</type>
</CustomField>