apex-backwoods/objects/Park_Tour__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Park Tour</relationshipLabel>
    <relationshipName>Park_Tour</relationshipName>
    <type>Lookup</type>
</CustomField>